[package]
name = "aram-portal-reminder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
reqwest = "0.11"
tokio = { version = "1.23.0", features = ["full"]}
base64 = "0.20.0"
serde_json = "1.0.89"
ctrlc = { version = "3.0", features = ["termination"] }
colored = "2.0.0"
rodio = { version = "0.16.0", features = ["symphonia-mp3"]}
